--- a/assets/media/style.css
+++ b/assets/media/style.css
@@ -86,6 +86,9 @@ body {
 .jcb {
     justify-content: space-between;
 }
+.jce {
+    justify-content: space-evenly;
+}
  .jcc {
     justify-content: center;
 } 
@@ -94,7 +97,16 @@ body {
     align-items: center;
 }
 
+.flex-60 {
+    flex: 0 1 60%;
+}
+.flex-35 {
+    flex: 0 1 35%;
+}
 /* Square */
+.container {
+    padding: 1rem;
+}
 .heading {
     background-color: var(--primary);
     padding: 2rem 0;
@@ -113,20 +125,16 @@ body {
 .grid {
     width: 600px;
     height: 600px;
-    margin: 0 auto;
+
 }
 
 .mole {
-    background-image: url("/assets/media/mole.jpg");
+    background-image: url("mole.jpg");
     background-size: cover;
     background-position: center center;
 }
 
-.info {
-    width: 600px;
-    margin: 0 auto;
-    padding: 2rem 0;
-}
+
 
 h2 {
     font-size: 1.3rem;
@@ -135,12 +143,15 @@ h2 {
 }
 
 .buttons {
-    width: 600px;
     margin: 0 auto;
     padding: 2rem 0;
 }
 button {
-    padding: .5rem .75rem;
+    padding: .75rem 1rem;
     font-size: 1.3rem;
-    
+    background-color: var(--primary);
+    color: var(--seconday);
+    border: 0;
+    outline: 0;
+    border-radius: .3rem;
 }
